# LateralEngine

./: .gitignore  CMakeLists.txt  README.md
Code/DeprecatedCode/: VulkanRender.cpp  VulkanRender.h
Code/DeprecatedCode/Shaders/: compileShaderstoByte.bat
Code/DeprecatedCode/Vulkan/: VulkanDebugger.h  VulkanHelper.h  VulkanResearcher.cpp  VulkanResearcher.h
Code/Source/: Application.cpp  Engine.h  glad.c  main.cpp
Code/Source/Components/: Component.cpp  Component.h
Code/Source/Renderer/: Camera.cpp  Camera.h  IMesh.h  Material.h  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Model.cpp  Model.h  OpenglRenderer.cpp  OpenglRenderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VulkanRender.cpp  VulkanRender.h  VulkanRenderer.cpp  VulkanRenderer.h
Code/Source/Shaders/: BasicFrag.fs  BasicVertex.vs  ChunkOutline.fs  CubeVertex.vs
Code/Source/Utilities/: AABB.cpp  AABB.h  AssetManager.cpp  AssetManager.h  Globals.cpp  Globals.h  Input.cpp  Input.h  Log.cpp  Log.h  ObjLoader.cpp  ObjLoader.h  Physics.cpp  Physics.h
Code/Source/Utilities/Vulkan/: VulkanDebugger.cpp  VulkanResearcher.cpp  VulkanResearcher.h  VulkanUtilities.cpp  VulkanUtilities.h
Code/Source/Window/: Window.cpp  Window.h
Code/Source/World/: Chunk.cpp  Chunk.h  ChunkCube.h  ChunkManager.cpp  ChunkManager.h  Cube.cpp  Cube.h  GameObject.cpp  GameObject.h  Transform.cpp  Transform.h
Code/Source/glad/: glad.h
Code/Source/imgui/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
